--- a/metadata.yaml
+++ b/metadata.yaml
@@ -14,6 +14,11 @@
 
 homepage: "https://measuremindsgroup.com"
 documentation: "https://measuremindsgroup.com"
+# Latest version
+versions:
+  - sha: 73c91aa53a4b2dad9b963185efd9f06bac1d00fb
+    changeNotes: Changed default maximum URL Length
+# Older versions
 versions:
   - sha: a5caeea17e6b5d0f44c42f221af863c8c35fb976
     changeNotes: Initial release
